--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-react": "^7.30.0",
     "postcss": "^8.4.14",
     "prettier": "2.6.2",
+    "prettier-plugin-sorted": "^2.0.0",
     "svgo": "^2.8.0",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3",
